clear dashboard dialog page updated with new css design, minor changes on clear dashboard and image editor botton.

--- a/delete.html
+++ b/delete.html
@@ -2,10 +2,27 @@
 <html>
 <head>
     <title>Clear Dashboard</title>
+    <style>
+        body {
+                    background-color: #FFE6E6;
+                }
+                input {
+                    background-color: #E1AFD1;
+                    color: #201658;
+                    font-size: 30px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    height:10vh;
+                    margin:0px;
+                    padding:0px;
+                    border-radius:10px;
+                }
+    </style>
 </head>
 <body>
     <form method="post" action="delete.php">
-        <input type="submit" value="Clear dashboard permanently">
+        <input type="submit" value="Click to Clear Dashboard Permanently!">
     </form>
     
     
